fossindia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app.kubernetes.io/name: fossindia
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fossindia
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fossindia
    spec:
      containers:
      - name: commafeed
        image: athou/commafeed:5.6.1-postgresql
        ports:
        - containerPort: 8082
        resources:
          limits:
            memory: 256M
      - name: ntfy
        image: binwiederhier/ntfy:v2.11.0
        args: [ "serve" ]
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: ntfy-config
          mountPath: /etc/ntfy/server.yml
          subPath: server.yml
        - name: ntfy-data
          mountPath: /var/lib/ntfy
        - name: ntfy-cache
          mountPath: /var/cache/ntfy
      volumes:
      - name: ntfy-config
        configMap:
          name: fossindia-ntfy-config
      - name: ntfy-data
        persistentVolumeClaim:
          claimName: fossindia-ntfy-data
      - name: ntfy-cache
        persistentVolumeClaim:
          claimName: fossindia-ntfy-cache
