fossindia/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: commafeed
spec:
  selector:
    app.kubernetes.io/name: fossindia
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app.kubernetes.io/name: fossindia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
